--- a/index.html
+++ b/index.html
@@ -25,31 +25,42 @@
     <nav class="bg-black fixed-top row">
         <div class="container navbar-nav navbar-light navbar-expand-lg py-2">
             <a href="#" class="navbar-brand"><img src="img/platypus-logo.png" alt="Startup-logo" height="45px"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
                         <a class="nav-link nav-linkto " href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
+                    </li>   
                     <li class="nav-item">
                         <a class="nav-link nav-linkto" href="#">About Us</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link nav-linkto" href="#">Rescued Platypus</a>
+                    </li>
+                    <li class="nav-item res-invisible-1">
+                        <a class="nav-link nav-linkto" href="#">Help A Platypus</a>
+                    </li>
+                    <li class="nav-item res-invisible-1">
+                        <a class="nav-link nav-linkto" href="#">Search</a>
+                    </li>
                 </ul>
             </div>
-            <form class="form-inline">
-                <button class="mx-2 btn btn-nav my-2 my-sm-0" type="submit">HELP A PLATYPUS</button>
-                <button class="mx-2 btn btn-nav my-2 my-sm-0 search-icon" type="submit"><i
-                        class="fas fa-search"></i></button>
-            </form>
+                <form class="form-inline res-invisible-2">
+                    <button class="mx-2 btn btn-nav my-2 my-sm-0" type="submit">HELP A PLATYPUS</button>
+                    <button class="mx-2 btn btn-nav my-2 my-sm-0 search-icon" type="submit"><i
+                            class="fas fa-search"></i></button>
+                </form>
         </div>
     </nav>
     <header class="">
         <div class="container">
             <div class="header-style">
                 <h1 class="header-title">Be a Hero! Rescue a Platypus.</h1>
-                <h4 class="header-subtitle">"Because the platypus both lays eggs and produces milk, <br /> it's one of the few animals that can make it's own custard."</h4>
+                <h4 class="header-subtitle">"Because the platypus both lays eggs and produces milk, <br /> it's one of
+                    the few animals that can make it's own custard."</h4>
                 <button class="mx-2 btn btn-nav my-2 my-sm-0" id="header-button" type="submit">MORE INFO</button>
             </div>
         </div>
@@ -60,7 +71,9 @@
                 <img src="img/platypus-food.webp" class="card-img-top" alt="Platypus and Food">
                 <div class="card-body card-body-flex">
                     <h5 class="card-title">FOOD</h5>
-                    <p class="card-text">- platypus are carnivores<br/> - they feed on annelid worms, insect larvae, freshwater shrimp, and freshwater yabby (crayfish)<br/> - platypus eats 20% of its body weight (equivalent to a 150lb human eating 30lbs of food)</p>
+                    <p class="card-text">- platypus are carnivores<br /> - they feed on annelid worms, insect larvae,
+                        freshwater shrimp, and freshwater yabby (crayfish)<br /> - platypus eats 20% of its body weight
+                        (equivalent to a 150lb human eating 30lbs of food)</p>
                     <a href="#" class="btn btn-primary">More Info</a>
                 </div>
             </div>
@@ -68,7 +81,9 @@
                 <img src="img/platypus-environment.jpg" class="card-img-top" alt="Platypus Environment">
                 <div class="card-body card-body-flex">
                     <h5 class="card-title">ENVIRONMENT</h5>
-                    <p class="card-text">-platypus needs a constant source of water (i.e. freshwater lakes, rivers, lagoons, farm dams, and streams)<br/> - they are considered nocturnal and are non-sociable. They tend to only gather during mating season.</p>
+                    <p class="card-text">-platypus needs a constant source of water (i.e. freshwater lakes, rivers,
+                        lagoons, farm dams, and streams)<br /> - they are considered nocturnal and are non-sociable.
+                        They tend to only gather during mating season.</p>
                     <a href="#" class="btn btn-primary">More Info</a>
                 </div>
             </div>
@@ -76,7 +91,9 @@
                 <img src="img/platypus-tips.jpg" class="card-img-top" alt="Some Tips">
                 <div class="card-body card-body-flex">
                     <h5 class="card-title">EXTRA TIPS</h5>
-                    <p class="card-text">- platypus have venomous barb. Be careful when handling them<br/> - it’s actually ILLEGAL to own a platypus, bylaw according to Australian wildlife<br/> - Those with a license to handle platypus can rescue them. After rehab platypus
+                    <p class="card-text">- platypus have venomous barb. Be careful when handling them<br /> - it’s
+                        actually ILLEGAL to own a platypus, bylaw according to Australian wildlife<br /> - Those with a
+                        license to handle platypus can rescue them. After rehab platypus
                         are released back into the wild.</p>
                     <a href="#" class="btn btn-primary">More Info</a>
                 </div>
@@ -110,8 +127,8 @@
     </section>
     <footer class="">
         <div class="container row">
-            <a href="#" class="navbar-brand" style="margin-top: 50px;"><img src="img/platypus-logo.png" alt="Startup-logo"
-                    height="85px"></a>
+            <a href="#" class="navbar-brand" style="margin-top: 50px;"><img src="img/platypus-logo.png"
+                    alt="Startup-logo" height="85px"></a>
             <div class="footer-links d-flex col-6">
                 <div class="list-header"><a class="font-weight-bold">Company</a>
                     <ul class="footer-list text-muted">
@@ -136,14 +153,14 @@
                     </ul>
                 </div>
             </div>
-                <div class="social-media-btn col-4">
-                    <ul class="row">
-                        <li><a href="#" class="fa fa-instagram"></a></li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
-                        <li><a href="#" class="fa fa-facebook"></a></li>
-                    </ul>
-                </div>
-            
+            <div class="social-media-btn col-4">
+                <ul class="row">
+                    <li><a href="#" class="fa fa-instagram"></a></li>
+                    <li><a href="#" class="fa fa-twitter"></a></li>
+                    <li><a href="#" class="fa fa-facebook"></a></li>
+                </ul>
+            </div>
+
         </div>
     </footer>
 
