--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
     <nav class="bg-black fixed-top">
         <div class="container navbar-nav navbar-light navbar-expand-lg py-2 nav-flex">
             <a href="#" class="navbar-brand"><img src="img/platypus-logo.png" alt="Startup-logo" height="45px"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
                         <a class="nav-link nav-linkto " href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>   
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link nav-linkto" href="#">About Us</a>
                     </li>
@@ -46,19 +45,18 @@
                     </li>
                 </ul>
             </div>
-                <form class="form-inline res-invisible-2">
-                    <button class="mx-2 btn btn-nav my-2 my-sm-0" type="submit">HELP A PLATYPUS</button>
-                    <button class="mx-2 btn btn-nav my-2 my-sm-0 search-icon" type="submit"><i
+            <form class="form-inline res-invisible-2">
+                <button class="mx-2 btn btn-nav my-2 my-sm-0" type="submit">HELP A PLATYPUS</button>
+                <button class="mx-2 btn btn-nav my-2 my-sm-0 search-icon" type="submit"><i
                             class="fas fa-search"></i></button>
-                </form>
+            </form>
         </div>
     </nav>
     <header class="">
         <div class="container">
             <div class="header-style">
                 <h1 class="header-title">Be a Hero! Rescue a Platypus.</h1>
-                <h4 class="header-subtitle">"Because the platypus both lays eggs and produces milk, <br /> it's one of
-                    the few animals that can make it's own custard."</h4>
+                <h4 class="header-subtitle">"Because the platypus both lays eggs and produces milk, <br /> it's one of the few animals that can make it's own custard."</h4>
                 <button class="mx-2 btn btn-nav my-2 my-sm-0" id="header-button" type="submit">MORE INFO</button>
             </div>
         </div>
@@ -113,7 +111,7 @@
                     <div class="collapse" id="collapseExample-3">
                         <div class="">
                             <p class="card-text environment-text">platypus have venomous barb. Be careful when handling them</p>
-                            <p class="card-text environment-text border-top pt-3">it’s actually ILLEGAL to own a platypus, bylaw according to Australian wildlife</p>
+                            <p class="card-text environment-text border-top pt-3">it’s actually ILLEGAL to own a platypus</p>
                             <p class="card-text environment-text border-top pt-3">Those with a license to handle platypus can rescue them. After rehab platypus are released back into the wild.</p>
                             <a href="# " class="card-footer btn btn-primary environment-moreInfo">More Info</a>
                         </div>
@@ -156,8 +154,7 @@
     </section>
     <footer class="">
         <div class="container row">
-            <a href="#" class="navbar-brand" style="margin-top: 50px;"><img src="img/platypus-logo.png" alt="Startup-logo"
-                    height="85px"></a>
+            <a href="#" class="navbar-brand" style="margin-top: 50px;"><img src="img/platypus-logo.png" alt="Startup-logo" height="85px"></a>
             <div class="footer-links d-flex col-7">
                 <div class="list-header"><a class="font-weight-bold">Company</a>
                     <ul class="footer-list text-muted">
@@ -182,13 +179,19 @@
                     </ul>
                 </div>
             </div>
-                <div class="social-media-btn col-3">
-                    <ul class="row">
-                        <li><a href="#" class="fa fa-instagram"></a></li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
-                        <li><a href="#" class="fa fa-facebook"></a></li>
-                    </ul>
-                </div>
+            <div class="social-media-btn col-3">
+                <ul class="row">
+                    <li>
+                        <a href="#" class="fa fa-instagram"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="fa fa-twitter"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="fa fa-facebook"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
