--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 <body>
     <nav class="bg-black fixed-top">
         <div class="container navbar-nav navbar-light navbar-expand-lg py-2 nav-flex nav-row">
-            <a href="#" class="navbar-brand"><img src="img/platypus-logo.png" alt="Startup-logo" height="45px"></a>
+            <a href="index.html" class="navbar-brand"><img src="img/platypus-logo.png" alt="Startup-logo" height="45px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link nav-linkto " href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link nav-linkto " href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-linkto" href="#">About Us</a>
+                        <a class="nav-link nav-linkto" href="about-us.html">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link nav-linkto" href="#">Rescued Platypus</a>
@@ -154,7 +154,7 @@
     </section>
     <footer class="">
         <div class="container row">
-            <a href="#" class="navbar-brand" style="margin-top: 50px;"><img src="img/platypus-logo.png" alt="Startup-logo" height="85px"></a>
+            <a href="index.html" class="navbar-brand" style="margin-top: 50px;"><img src="img/platypus-logo.png" alt="Startup-logo" height="85px"></a>
             <div class="footer-links d-flex col-7">
                 <div class="list-header"><a class="font-weight-bold">Company</a>
                     <ul class="footer-list text-muted">
