--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='icon' href='img/platypus-favicon.png' type='image/x-icon'>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -22,43 +24,55 @@
 <body>
     <nav class="bg-black fixed-top">
         <div class="container navbar-nav navbar-light navbar-expand-lg py-2 nav-flex nav-row">
-            <a href="#" class="navbar-brand"><img src="img/platypus-logo.png" alt="Startup-logo" height="45px"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link nav-linkto " href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>   
-                    <li class="nav-item">
-                        <a class="nav-link nav-linkto" href="#">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-linkto" href="#">Rescued Platypus</a>
-                    </li>
-                    <li class="nav-item res-invisible-1">
-                        <a class="nav-link nav-linkto" href="#">Help A Platypus</a>
-                    </li>
-                    <li class="nav-item res-invisible-1">
-                        <a class="nav-link nav-linkto" href="#">Search</a>
-                    </li>
-                </ul>
+            <a href="#" class="navbar-brand sm-pl"><img src="img/platypus-logo.png" alt="Startup-logo"
+                    height="45px"></a>
+                <div id="fix-hamburger">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link nav-linkto " href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-linkto" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-linkto" href="#">Rescued Platypus</a>
+                        </li>
+                        <li class="nav-item res-invisible-1">
+                            <a class="nav-link nav-linkto" href="#">Help A Platypus</a>
+                        </li>
+                        <li class="nav-item res-invisible-1">
+                            <a class="nav-link nav-linkto" href="#">Search</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-                <form class="form-inline res-invisible-2">
-                    <button class="mx-2 btn btn-nav my-2 my-sm-0" type="submit">HELP A PLATYPUS</button>
+            </div>
+            <form class="form-inline res-invisible-2">
+                <button class="mx-2 btn btn-nav my-2 my-sm-0" type="submit">HELP A PLATYPUS</button>
+                <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="mx-2 btn btn-nav my-2 my-sm-0 search-icon" type="submit"><i
-                            class="fas fa-search"></i></button>
-                </form>
+                            class="fas fa-search"></i></button> -->
+                <div class="d-flex justify-content-center">
+                    <div class="searchbar">
+                        <input class="search-input" type="text" name="" placeholder="Search...">
+                        <a href="#" class="search-icon"><i class="fas fa-search"></i></a>
+                    </div>
+                </div>
+            </form>
         </div>
     </nav>
-    <header class="">
+    <header>
         <div class="container">
             <div class="header-style">
-                <h1 class="header-title">Be a Hero! Rescue a Platypus.</h1>
-                <h4 class="header-subtitle">"Because the platypus both lays eggs and produces milk, <br /> it's one of
-                    the few animals that can make it's own custard."</h4>
+                <h1 class="header-title">Be a Hero!<br/> Rescue a Platypus.</h1>
+                <h4 class="header-subtitle">'Why save a platypus? <br />Because the platypus both lays eggs and produces
+                    milk, <br /> it's one of
+                    the few animals that can make it's own custard.'</h4>
                 <button class="mx-2 btn btn-nav my-2 my-sm-0" id="header-button" type="submit">MORE INFO</button>
             </div>
         </div>
@@ -70,8 +84,10 @@
                 <div class="card-body card-body-flex ">
                     <h5 class="card-title environment-title">FOOD</h5>
                     <p class="card-text environment-text">platypus are carnivores</p>
-                    <p class="card-text environment-text border-top pt-3">they feed on annelid worms, insect larvae, freshwater shrimp, and freshwater yabby (crayfish)</p>
-                    <p class="card-text environment-text border-top pt-3">platypus eats 20% of its body weight (equivalent to a 150lb human eating 30lbs of food)</p>
+                    <p class="card-text environment-text border-top pt-3">they feed on annelid worms, insect larvae,
+                        freshwater shrimp, and freshwater yabby (crayfish)</p>
+                    <p class="card-text environment-text border-top pt-3">platypus eats 20% of its body weight
+                        (equivalent to a 150lb human eating 30lbs of food)</p>
                     <a href="# " class="btn btn-primary ">More Info</a>
                 </div>
             </div>
@@ -79,8 +95,10 @@
                 <img src="img/platypus-environment.jpg " class="card-img-top " alt="Platypus Environment ">
                 <div class="card-body card-body-flex ">
                     <h5 class="card-title environment-title">ENVIRONMENT</h5>
-                    <p class="card-text environment-text">platypus needs a constant source of water (i.e. freshwater lakes, rivers, lagoons, farm dams, and streams)</p>
-                    <p class="card-text environment-text border-top pt-3">they are considered nocturnal and are non-sociable. They tend to only gather during mating season.</p>
+                    <p class="card-text environment-text">platypus needs a constant source of water (i.e. freshwater
+                        lakes, rivers, lagoons, farm dams, and streams)</p>
+                    <p class="card-text environment-text border-top pt-3">they are considered nocturnal and are
+                        non-sociable. They tend to only gather during mating season.</p>
                     <a href="# " class="btn btn-primary ">More Info</a>
                 </div>
             </div>
@@ -90,8 +108,10 @@
                 <div class="card-body card-body-flex ">
                     <h5 class="card-title environment-title">EXTRA TIPS</h5>
                     <p class="card-text environment-text">platypus have venomous barb. Be careful when handling them</p>
-                    <p class="card-text environment-text border-top pt-3">it’s actually ILLEGAL to own a platypus, bylaw according to Australian wildlife</p>
-                    <p class="card-text environment-text border-top pt-3">Those with a license to handle platypus can rescue them. After rehab platypus are released back into the wild.</p>
+                    <p class="card-text environment-text border-top pt-3">it’s actually ILLEGAL to own a platypus, bylaw
+                        according to Australian wildlife</p>
+                    <p class="card-text environment-text border-top pt-3">Those with a license to handle platypus can
+                        rescue them. After rehab platypus are released back into the wild.</p>
                     <a href="# " class="btn btn-primary ">More Info</a>
                 </div>
             </div>
@@ -124,8 +144,8 @@
     </section>
     <footer class="">
         <div class="container row">
-            <a href="#" class="navbar-brand" style="margin-top: 50px;"><img src="img/platypus-logo.png" alt="Startup-logo"
-                    height="85px"></a>
+            <a href="#" class="navbar-brand" style="margin-top: 50px;"><img src="img/platypus-logo.png"
+                    alt="Startup-logo" height="85px"></a>
             <div class="footer-links d-flex col-7">
                 <div class="list-header"><a class="font-weight-bold">Company</a>
                     <ul class="footer-list text-muted">
@@ -150,21 +170,24 @@
                     </ul>
                 </div>
             </div>
-                <div class="social-media-btn col-3">
-                    <ul class="row">
-                        <li><a href="#" class="fa fa-instagram"></a></li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
-                        <li><a href="#" class="fa fa-facebook"></a></li>
-                    </ul>
-                </div>
+            <div class="social-media-btn col-3">
+                <ul class="row">
+                    <li><a href="#" class="fa fa-instagram"></a></li>
+                    <li><a href="#" class="fa fa-twitter"></a></li>
+                    <li><a href="#" class="fa fa-facebook"></a></li>
+                </ul>
+            </div>
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+        </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+        </script>
     <script src="" async defer></script>
 </body>
 
