done fixing errors when merging from master for RESCUED section

--- a/index.html
+++ b/index.html
@@ -175,7 +175,6 @@ body {
     </section>
     <section style="background-color: #189090;">
         <div class="container d-flex justify-content-center pt-5 pb-4">    
-            
             <h1 style="color:#F09048; font-family: Arial; text-decoration: underline;">RESCUED PLATYPUS</h1>
         </div>
         <div class="container d-flex pb-5 pt-2">                
@@ -202,6 +201,11 @@ body {
                     <img src="img/15.jpg" style="width:100%">
                 </div>
             </div>
+        </div>
+    </section>
+    <section style ="background-color: #D86000">
+        <div class="container d-flex justify-content-center pt-5 pb-4">    
+            <h1 style="color:#189090; font-family: Arial; text-decoration: underline;">WHAT IS A PLATYPUS?</h1>
         </div>
     </section>
     <section class=" " style="background-color: #189090 ">
