--- a/about-us.html
+++ b/about-us.html
@@ -49,7 +49,7 @@
             </form>
         </div>
     </nav>
-    <header class="">
+    <header class="header-aboutus">
         <div class="container">
             <div class="aboutus-header-style">
                 <h1 class="header-title">WHO ARE WE ?</h1>
