done adding WHAT IS A PLATYPUS section

--- a/index.html
+++ b/index.html
@@ -150,8 +150,16 @@
         </div>
     </section>
     <section style ="background-color: #D86000">
-        <div class="container d-flex justify-content-center pt-5 pb-4">    
-            <h1 style="color:#189090; font-family: Arial; text-decoration: underline;">WHAT IS A PLATYPUS?</h1>
+        <div class="container d-flex justify-content-center pt-5 pb-0">    
+            <h1 style="color: #2562d4; font-family: Arial; text-decoration: underline;">WHAT IS A PLATYPUS?</h1>
+        </div>
+        <div class="container d-flex justify-content-center pt-5 pb-5">
+            <img class="m-3 equation-icon" src="img/duck.svg">
+            <img class="m-3 equation-icon" src="img/plus.svg">
+            <img class="m-3 equation-icon" src="img/beaver.svg">
+            <img class="m-3 equation-icon" src="img/equal.svg">
+            <img class="m-3 equation-icon" src="img/platypus.svg">
+
         </div>
     </section>
     <section class=" " style="background-color: #189090 ">
