edit WHAT section

--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
             </div>
         </div>
     </header>
+    <section style ="background-color: #D86000">
+        <div class="container d-flex justify-content-center pt-5 pb-0">    
+            <h1 style="color: #1d9df3; font-family: Arial; text-decoration: none;">WHAT IS A PLATYPUS?</h1>
+        </div>
+        <div class="container d-flex justify-content-center pt-5 pb-5 ">
+            <img class="m-3" id="animal-icon" src="img/duck.svg">
+            <img class="m-3" id="equation-icon" src="img/plus.svg">
+            <img class="m-3" id="animal-icon" src="img/beaver.svg">
+            <img class="m-3" id="equation-icon" src="img/equal.svg">
+            <img class="m-3" id="animal-icon" src="img/platypus.svg">
+        </div>
+    </section>
     <section class="environment-section">
         <div class="environment container no-stretch py-3">
             <<!--img src="img/medium-bg.png" alt="environment-picture" class="environment-bg" />-->
@@ -194,19 +206,6 @@
                     <img src="img/15.jpg" style="width:100%">
                 </div>
             </div>
-        </div>
-    </section>
-    <section style ="background-color: #D86000">
-        <div class="container d-flex justify-content-center pt-5 pb-0">    
-            <h1 style="color: #2562d4; font-family: Arial; text-decoration: underline;">WHAT IS A PLATYPUS?</h1>
-        </div>
-        <div class="container d-flex justify-content-center pt-5 pb-5">
-            <img class="m-3 equation-icon" src="img/duck.svg">
-            <img class="m-3 equation-icon" src="img/plus.svg">
-            <img class="m-3 equation-icon" src="img/beaver.svg">
-            <img class="m-3 equation-icon" src="img/equal.svg">
-            <img class="m-3 equation-icon" src="img/platypus.svg">
-
         </div>
     </section>
     <section class=" " style="background-color: #189090 ">
