responsive for the cards and about-us in 'index.html'

--- a/about-us.html
+++ b/about-us.html
@@ -54,7 +54,7 @@
             <div class="aboutus-header-style">
                 <h1 class="header-title">WHO ARE WE ?</h1>
                 <div class="container employees p-5 row">
-                    <div class="card bg-transparent no-border card-body-flex aboutus-card" style="width: 18rem; ">
+                    <div class="card bg-transparent no-border card-body-flex aboutus-page-card" style="width: 18rem; ">
                         <img src="img/Phil.png " class="avatar-aboutus" alt="Phil 's Avatar">
                         <div class="card-body">
                             <h5 class="card-title employee-name-aboutus text-danger px-4">PHIL</h5>
@@ -63,7 +63,7 @@
                             <p class="card-text text-warning">Or do you guys think we should make-up our info about what we did in this "save the platypus campaign"</p>
                         </div>
                     </div>
-                    <div class="card bg-transparent no-border card-body-flex aboutus-card" style="width: 18rem; ">
+                    <div class="card bg-transparent no-border card-body-flex aboutus-page-card" style="width: 18rem; ">
                         <img src="img/Anh.png " class="avatar-aboutus" alt="Anh ' Avatar">
                         <div class="card-body">
                             <h5 class="card-title employee-name-aboutus text-danger px-4">ANH</h5>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="container employees p-5 row">
-                    <div class="card bg-transparent no-border card-body-flex aboutus-card" style="width: 18rem;">
+                    <div class="card bg-transparent no-border card-body-flex aboutus-page-card" style="width: 18rem;">
                         <img src="img/Loc.png" class="avatar-aboutus" alt="Loc's Avatar ">
                         <div class="card-body ">
                             <h5 class="card-title employee-name-aboutus text-danger px-4">LOC</h5>
@@ -83,7 +83,7 @@
                             <p class="card-text text-warning">Or do you guys think we should make-up our info about what we did in this "save the platypus campaign"</p>
                         </div>
                     </div>
-                    <div class="card bg-transparent no-border card-body-flex aboutus-card" style="width: 18rem;">
+                    <div class="card bg-transparent no-border card-body-flex aboutus-page-card" style="width: 18rem;">
                         <img src="img/Vy.png" class="avatar-aboutus" alt="Vy's Avatar ">
                         <div class="card-body ">
                             <h5 class="card-title employee-name-aboutus text-danger px-4">Vy</h5>
